# JCodeQuest

./: .dockerignore  .env.docker.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.verify-logs/: jcq-verify.db
admin_dashboard/: Dockerfile  index.html  package-lock.json  package.json
admin_dashboard_react/: Dockerfile  index.html
authoring_engine/: .env.example  .env_example  Dockerfile  env.sh.example  pyproject.toml
authoring_engine/authoring/: admin_auth.py  api_models.py  backend_client.py  config.py  embeddings.py  langsmith_tokens.py  llm.py  main.py  schemas.py  server.py
authoring_engine/authoring/pipeline/: graph.py  node_stats.py  prompts.py
authoring_engine/authoring/pipeline/nodes/: attack.py  compare.py  fetch.py  generate.py  judge.py  persist.py  retrieve.py  solver.py  verify.py
authoring_engine/authoring/routers/: __init__.py  admin_comparison.py  health.py  notices.py  problems.py  reports.py  runs.py  spans.py  submissions.py
authoring_engine/authoring/scripts/: backfill_embeddings.py
authoring_engine/tests/: test_judge_gates.py  test_judge_issues.py  test_langsmith_tokens.py  test_llm_provider.py  test_node_stats.py  test_rag_retrieval.py
backend/: .env.example  .env_example  Dockerfile  SETUP.md  _smoke_userprofile.py  docker-entrypoint.sh  migrate.py  requirements.txt
judge_engine/: .env.example  Dockerfile  pyproject.toml
judge_engine/judge/: admin_auth.py  backend_client.py  callback.py  ensemble.py  jobs.py  prompts.py  queue.py  server.py
judge_engine/judge/routers/: __init__.py  stats.py  submissions.py  users.py
judge_engine/judge/sandbox/: __init__.py  runner.py
judge_engine/tests/: test_jobqueue.py  test_sandbox.py
scripts/: dev.sh  (+5 more)
(+160 files in other folders)
