[project]
name = "jcq-judge"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "jcq-shared @ file:../shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "langsmith>=0.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["judge*"]
